force-app/main/default/objects/Medication_List__c/Medication_List__c.object-meta.xml
<CustomObject>
    <label>Medication List</label>
    <nameField>
        <label>Medication List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medication Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>