force-app/main/default/objects/Medication_List__c/fields/ATC_Code__c.field-meta.xml
<CustomField>
    <fullName>ATC_Code__c</fullName>
    <label>ATC Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>