force-app/main/default/objects/Medication_List__c/fields/CIM_Code__c.field-meta.xml
<CustomField>
    <fullName>CIM_Code__c</fullName>
    <label>CIM Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>