force-app/main/default/objects/Medication_List__c/fields/Concentration__c.field-meta.xml
<CustomField>
    <fullName>Concentration__c</fullName>
    <label>Concentration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>