force-app/main/default/objects/Medication_List__c/fields/DCI__c.field-meta.xml
<CustomField>
    <fullName>DCI__c</fullName>
    <label>DCI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>