force-app/main/default/objects/Medication_List__c/fields/DCI_Code__c.field-meta.xml
<CustomField>
    <fullName>DCI_Code__c</fullName>
    <label>DCI Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>