force-app/main/default/objects/Medication_List__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <type>TextArea</type>
</CustomField>