force-app/main/default/objects/Medication_List__c/fields/Packaging_validity__c.field-meta.xml
<CustomField>
    <fullName>Packaging_validity__c</fullName>
    <label>Packaging validity</label>
    <type>TextArea</type>
</CustomField>