force-app/main/default/objects/Medication_List__c/fields/Packaging_volume__c.field-meta.xml
<CustomField>
    <fullName>Packaging_volume__c</fullName>
    <label>Packaging volume</label>
    <length>20</length>
    <type>Text</type>
</CustomField>