force-app/main/default/objects/Medication_List__c/fields/Pharmaceutical_form__c.field-meta.xml
<CustomField>
    <fullName>Pharmaceutical_form__c</fullName>
    <label>Pharmaceutical form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONC. PT. SOL. INJ./PERF.</fullName>
            </value>
            <value>
                <fullName>COMPR. FILM.</fullName>
            </value>
            <value>
                <fullName>SOL INJ.</fullName>
            </value>
            <value>
                <fullName>SOL INJ. IN STILOU INJECTOR (PEN) PREUMPLUT</fullName>
            </value>
            <value>
                <fullName>SOL. ORALA</fullName>
            </value>
            <value>
                <fullName>COMPR.</fullName>
            </value>
            <value>
                <fullName>SOL. INJ.</fullName>
            </value>
            <value>
                <fullName>PULB. + SOLV. PT. SUSP. INJ. CU ELIB. PREL.</fullName>
            </value>
            <value>
                <fullName>PULB. PT. DISPERSIE PERF.</fullName>
            </value>
            <value>
                <fullName>PULB. PT. SUSP. PERF.</fullName>
            </value>
            <value>
                <fullName>LIOF. ORAL</fullName>
            </value>
            <value>
                <fullName>PULB. PT. SOL. ORALA</fullName>
            </value>
            <value>
                <fullName>CAPS.</fullName>
            </value>
            <value>
                <fullName>COMPR. EFF.</fullName>
            </value>
            <value>
                <fullName>PULBERE ORALA IN PLIC</fullName>
            </value>
            <value>
                <fullName>SOL INJ./SOL. PT. INHALAT PRIN NEBULIZATOR</fullName>
            </value>
            <value>
                <fullName>GRAN. PT. SOL. ORALA</fullName>
            </value>
            <value>
                <fullName>SIROP</fullName>
            </value>
            <value>
                <fullName>PULB. PT. SOL. ORALA IN PLIC</fullName>
            </value>
            <value>
                <fullName>SOL. INJ. SAU PERF. IN SERINGA PREUMPLUTA</fullName>
            </value>
            <value>
                <fullName>SUPOZ.</fullName>
            </value>
            <value>
                <fullName>CREMA</fullName>
            </value>
            <value>
                <fullName>CONC. PT. SOL. PERF.</fullName>
            </value>
            <value>
                <fullName>COMPR. GASTROREZ.</fullName>
            </value>
            <value>
                <fullName>SOL INJ. IN SERINGA PREUMPLUTA</fullName>
            </value>
            <value>
                <fullName>SOL. PERF.</fullName>
            </value>
            <value>
                <fullName>GEL</fullName>
            </value>
            <value>
                <fullName>COMPR. SUBLING.</fullName>
            </value>
            <value>
                <fullName>PULB+SOLV. PT. SOL. INJ</fullName>
            </value>
            <value>
                <fullName>DRAJ.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>