force-app/main/default/objects/Medication_List__c/fields/Prescription__c.field-meta.xml
<CustomField>
    <fullName>Prescription__c</fullName>
    <label>Prescription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>OTC/S</fullName>
            </value>
            <value>
                <fullName>P6L</fullName>
            </value>
            <value>
                <fullName>P-6L</fullName>
            </value>
            <value>
                <fullName>P-6L/S</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>PR, PS.</fullName>
            </value>
            <value>
                <fullName>PRF</fullName>
            </value>
            <value>
                <fullName>P-RF/R</fullName>
            </value>
            <value>
                <fullName>P-RF/S</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
            <value>
                <fullName>PS/PR</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>S/PR-F</fullName>
            </value>
            <value>
                <fullName>S/P-RF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>