force-app/main/default/objects/Medication_List__c/fields/Therapeutic_Action__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Action__c</fullName>
    <label>Therapeutic Action</label>
    <type>TextArea</type>
</CustomField>